--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header{
     margin: 45px 200px 0px;
-    opacity: 0.7;
-    border: 1px solid #545454;
+    border: 1px solid rgba(84, 84, 84, 0.7);
     border-style: none none solid none;
 }
