Сделать блоки Elements и footer

--- a/pages/index.css
+++ b/pages/index.css
@@ -6,8 +6,15 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__name/profile__name.css);
-@import url(../blocks/profile/__profession/profile__profession.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add/profile__add.css);
-@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/elements-grid/elements-grid.css);
+@import url(../blocks/elements-grid/__item/elements-grid__item.css);
+@import url(../blocks/elements-grid/__image/elements-grid__image.css);
+@import url(../blocks/elements-grid/__title/elements-grid__title.css);
+@import url(../blocks/elements-grid/__button/elements-grid__button.css);
+@import url(../blocks/elements-grid/__text/elements-grid__text.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
