СДелать адаптивную верстку и форму js

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,3 +7,16 @@
     margin: 0;
     margin-bottom: 16px;
 }
+@media (max-width: 950px){
+    .profile__title{
+        font-size: 28px;
+        line-height: 30px;
+    }
+}
+@media (max-width: 570px){
+    .profile__title{
+        font-size: 27px;
+        line-height: 33px;
+        margin-bottom: 14px;
+    }
+}
