--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,10 @@
     line-height: 22px;
     color: #545454;
 }
+@media (max-width: 320px){
+    .footer__copyright{
+        margin: 0;
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
