--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,13 @@
 .footer{
     margin: 0 200px 60px;
 }
+@media (max-width: 950px){
+    .footer{
+        margin: 0 100px 60px;
+    }
+}
+@media (max-width: 570px){
+    .footer{
+        margin: 0 19px 36px;
+    }
+}
