--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,15 +1,20 @@
-.profile__subtitle{
+.form__button{
     font-family: Inter;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
+    text-align: center;
     color: #FFFFFF;
-    margin: 0;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    margin-top: 18px;
 }
 @media (max-width: 320px){
-    .profile__subtitle{
+    .form__button{
+        margin-top: 15px;
         font-size: 14px;
         line-height: 17px;
-        margin-bottom: 36px;
+        height: 46px;
     }
 }
