--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -8,3 +8,22 @@
 .profile__add:hover{
     opacity: 0.6;
 }
+@media (max-width: 900px){
+    .profile__add{
+        width: 16px;
+        height: 16px;
+    }
+}
+@media (max-width: 600px){
+    .profile__add{
+        width: 10px;
+        height: 12px;
+    }
+}
+@media (max-width: 320px){
+    .profile__add{
+        width: 16px;
+        height: 16px;
+        padding: 17px 132px 17px 134px;
+    }
+}
