--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -8,3 +8,11 @@
 .profile__edit:hover{
     opacity: 0.6;
 }
+@media (max-width: 320px){
+    .profile__edit{
+        margin-left: 10px;
+        width: 7.5px;
+        height: 7.5px;
+        padding: 5.25px;
+    }
+}
