--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,9 @@
     flex:1;
     justify-content: center;
 }
+@media (max-width: 320px){
+    .profile__info{
+        padding: 0;
+        align-items: center;
+    }
+}
