--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,3 +3,14 @@
     display: flex;
     align-items: center;
 }
+@media (max-width: 950px){
+    .profile{
+        margin: 36.25px 100px 0 100px;
+    }
+}
+@media (max-width: 600px){
+    .profile{
+        margin: 38.25px 19px 36px;
+        flex-direction: column;
+    }
+}
