Reduce image size

--- a/blocks/elements-grid/__button/elements-grid__button.css
+++ b/blocks/elements-grid/__button/elements-grid__button.css
@@ -1,5 +1,5 @@
 .elements-grid__button{
-    background-image: url(../../../images/белое\ сердце.svg);
+    background-image: url(../../../images/белое\ сердце.png);
     width: 22px;
     height: 19px;
     border: none;
