--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,13 +6,13 @@
 }
 @media (max-width: 950px){
     .header{
-        margin: 45px 100px 0px;;
+        margin: 45px 100px 0px;
     }
 }
 @media (max-width: 570px){
     .header{
         margin: 0;
-        margin-top: 28px; 
+        margin-top: 28px;
         padding-left: 27px;
     }
 }
