--- a/blocks/elements-grid/elements-grid.css
+++ b/blocks/elements-grid/elements-grid.css
@@ -20,9 +20,8 @@
 }
 @media (max-width: 320px){
     .elements-grid{
-        margin: 0px 19px 48px 19px;
+        margin-bottom: 48px;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
-        gap: 20px;
     }
 }
