--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,6 +4,7 @@
     font-size: 18px;
     line-height: 22px;
     color: #545454;
+    margin: 0;
 }
 @media (max-width: 320px){
     .footer__copyright{
