--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -9,6 +9,11 @@
     height: 50px;
     background-color: black;
     margin-top: 18px;
+    border: none;
+    border-radius: 2px;
+}
+.form__button:hover{
+    opacity: 0.8;
 }
 @media (max-width: 320px){
     .form__button{
