--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,29 +1,31 @@
 .profile__add{
-    width: 22px;
-    height: 22px;
-    padding: 12px 62px;
+    width: 150px;
+    height: 50px;
     border: 2px solid #FFFFFF;
     border-radius: 2px;
+    background-image: url(../../../images/plus.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
 }
 .profile__add:hover{
     opacity: 0.6;
 }
 @media (max-width: 900px){
     .profile__add{
-        width: 16px;
-        height: 16px;
+        width: 120px;
+        height: 40px;
     }
 }
 @media (max-width: 600px){
     .profile__add{
-        width: 10px;
-        height: 12px;
+        width: 250px;
+        height: 45px;
     }
 }
 @media (max-width: 320px){
     .profile__add{
-        width: 16px;
-        height: 16px;
-        padding: 17px 132px 17px 134px;
+        width: 282px;
+        height: 50px;
     }
 }
