--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,7 @@
 .profile__avatar{
     border-radius: 50%;
+    width: 120px;
+    height: 120px;
 }
 @media (max-width: 320px){
     .profile__avatar{
