--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,9 +1,12 @@
 .profile__edit{
-    width: 10px;
-    height: 10px;
-    padding: 5px;
+    width: 24px;
+    height: 24px;
     border: 1px solid #FFFFFF;
     margin-left: 18px;
+    background-image: url(../../../images/Vector\(3\).svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
 }
 .profile__edit:hover{
     opacity: 0.6;
@@ -11,8 +14,7 @@
 @media (max-width: 320px){
     .profile__edit{
         margin-left: 10px;
-        width: 7.5px;
-        height: 7.5px;
-        padding: 5.25px;
+        width: 18px;
+        height: 18px;
     }
 }
