--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,11 +5,13 @@
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
+    margin-top: 16px;
 }
 @media (max-width: 320px){
     .profile__subtitle{
         font-size: 14px;
         line-height: 17px;
         margin-bottom: 36px;
+        margin-top: 14px;
     }
 }
