--- a/blocks/form-edit/__input/form-edit__input.css
+++ b/blocks/form-edit/__input/form-edit__input.css
@@ -1,5 +1,5 @@
-.form__input{
-    font-family: Inter;
+.form-edit__input{
+    font-family: "Inter", arial, sans-serif;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
