--- a/blocks/elements-grid/__title/elements-grid__title.css
+++ b/blocks/elements-grid/__title/elements-grid__title.css
@@ -1,6 +1,6 @@
 .elements-grid__title{
     margin: 0;
-    font-family: Inter;
+    font-family: "Inter", arial, sans-serif;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
@@ -8,4 +8,19 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 200px;
+}
+@media (max-width: 1000px){
+    .elements-grid__title{
+        font-size: 18px;
+        line-height: 22px;
+        max-width: 180px;
+    }
+}
+@media (max-width: 320px){
+    .elements-grid__title{
+        font-size: 24px;
+        line-height: 29px;
+        max-width: 200px;
+    }
 }
