--- a/blocks/form-edit/__button/form-edit__button.css
+++ b/blocks/form-edit/__button/form-edit__button.css
@@ -1,5 +1,6 @@
-.form__button{
-    font-family: Inter;
+.form-edit__button{
+    padding: 0;
+    font-family: "Inter", arial, sans-serif;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
@@ -11,12 +12,13 @@
     margin-top: 18px;
     border: none;
     border-radius: 2px;
+    cursor: pointer;
 }
-.form__button:hover{
+.form-edit__button:hover{
     opacity: 0.8;
 }
 @media (max-width: 320px){
-    .form__button{
+    .form-edit__button{
         margin-top: 15px;
         font-size: 14px;
         line-height: 17px;
