--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
+    cursor: pointer;
 }
 .profile__edit:hover{
     opacity: 0.6;
