--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,11 +1,15 @@
 .profile__subtitle{
-    font-family: Inter;
+    font-family: "Inter", arial, sans-serif;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
     margin-top: 16px;
+    text-overflow: ellipsis;
+    max-width: 336px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 @media (max-width: 320px){
     .profile__subtitle{
