--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,10 +1,14 @@
 .profile__title{
-    font-family: Inter;
+    font-family: "Inter", arial, sans-serif;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
     color: #FFFFFF;
     margin: 0;
+    text-overflow: ellipsis;
+    max-width: 294px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 @media (max-width: 950px){
     .profile__title{
