--- a/blocks/elements-grid/__button/elements-grid__button.css
+++ b/blocks/elements-grid/__button/elements-grid__button.css
@@ -1,18 +1,19 @@
 .elements-grid__button{
     background-image: url(../../../images/white\ heart.svg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 22px;
     height: 19px;
     border: none;
     box-sizing: border-box;
     background-color: white;
     cursor: pointer;
+    flex-shrink: 0;
 }
 @media (max-width: 950px){
     .elements-grid__button{
-        width: 20px;
-        height: 15px;
+        width: 21px;
+        height: 17px;
     }
 }
 @media (max-width: 320px){
