--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,4 +1,4 @@
-.form-edit__button{
+.form__button{
     padding: 0;
     font-family: "Inter", arial, sans-serif;
     font-weight: normal;
@@ -14,11 +14,11 @@
     border-radius: 2px;
     cursor: pointer;
 }
-.form-edit__button:hover{
+.form__button:hover{
     opacity: 0.8;
 }
 @media (max-width: 320px){
-    .form-edit__button{
+    .form__button{
         margin-top: 15px;
         font-size: 14px;
         line-height: 17px;
