--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,4 +1,4 @@
-.form-edit__input{
+.form__input{
     font-family: "Inter", arial, sans-serif;
     font-weight: normal;
     font-size: 14px;
@@ -8,5 +8,6 @@
     border-style: none none solid none;
     margin-bottom: 30px;
     width: 100%;
-    padding-bottom: 13px;
+    padding: 0;
+    padding-bottom: 8px;
 }
