--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,4 +1,4 @@
-.form-edit__title{
+.form__title{
     font-family: "Inter", arial, sans-serif;
     font-weight: 900;
     font-size: 24px;
@@ -7,7 +7,7 @@
     margin: 0 0 54px;
 }
 @media (max-width: 320px){
-    .form-edit__title{
+    .form__title{
         font-size: 18px;
         line-height: 22px;
         margin-bottom: 75px;
