--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -18,7 +18,7 @@
         height: 40px;
     }
 }
-@media (max-width: 600px){
+@media (max-width: 750px){
     .profile__add{
         width: 250px;
         height: 45px;
@@ -28,5 +28,6 @@
     .profile__add{
         width: 282px;
         height: 50px;
+        background-image: url(../../../images/Vector\ \(4\).svg);
     }
 }
