--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -3,6 +3,7 @@
     height: 24px;
     border: 1px solid #FFFFFF;
     margin-left: 18px;
+    margin-right: 18px;
     background-image: url(../../../images/Vector\(3\).svg);
     background-repeat: no-repeat;
     background-position: center;
