--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,13 +1,7 @@
 .profile__info{
     display: flex;
-    flex-direction: column;
-    padding: 0 0 0 20px;
-    flex:1;
-    justify-content: center;
+    flex-direction: row;
+    align-items: baseline;
+    flex: 1;
 }
-@media (max-width: 320px){
-    .profile__info{
-        padding: 0;
-        align-items: center;
-    }
-}
+
