--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,15 +7,20 @@
     margin: 0;
     margin-top: 16px;
     text-overflow: ellipsis;
-    max-width: 336px;
     overflow: hidden;
     white-space: nowrap;
+    padding: 0;
+}
+@media (max-width: 750px){
+    .profile__subtitle{
+        text-align: center;
+    }
 }
 @media (max-width: 320px){
     .profile__subtitle{
         font-size: 14px;
         line-height: 17px;
-        margin-bottom: 36px;
-        margin-top: 14px;
+        margin-bottom: 33px;
+        margin-top: 8px;
     }
 }
