--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,7 +6,6 @@
     color: #FFFFFF;
     margin: 0;
     text-overflow: ellipsis;
-    max-width: 294px;
     overflow: hidden;
     white-space: nowrap;
 }
@@ -20,5 +19,6 @@
     .profile__title{
         font-size: 27px;
         line-height: 33px;
+        text-align: center;
     }
 }
