--- a/pages/index.css
+++ b/pages/index.css
@@ -21,12 +21,12 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/form-edit/form-edit.css);
-@import url(../blocks/form-edit/__button/form-edit__button.css);
-@import url(../blocks/form-edit/__container/form-edit__container.css);
-@import url(../blocks/form-edit/__input/form-edit__input.css);
-@import url(../blocks/form-edit/__input/_text/form-edit__input_text_subtitle.css);
-@import url(../blocks/form-edit/__input/_text/form-edit__input_text_title.css);
-@import url(../blocks/form-edit/__title/form-edit__title.css);
+@import url(../blocks/form/__button/form__button.css);
+@import url(../blocks/form/__container/form__container.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__input/_text/form__input_text_subtitle.css);
+@import url(../blocks/form/__input/_text/form__input_text_title.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/profile/__flex/profile__flex.css);
