--- a/blocks/elements-grid/__item/elements-grid__item.css
+++ b/blocks/elements-grid/__item/elements-grid__item.css
@@ -3,4 +3,6 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     overflow: hidden;
+    list-style-type: none;
+    position: relative;
 }
