--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/profile/__flex/profile__flex.css);
+@import url(../blocks/elements/elements.css);
 @import url(../blocks/elements-grid/elements-grid.css);
 @import url(../blocks/elements-grid/__item/elements-grid__item.css);
 @import url(../blocks/elements-grid/__image/elements-grid__image.css);
