--- a/blocks/elements-grid/elements-grid.css
+++ b/blocks/elements-grid/elements-grid.css
@@ -1,19 +1,13 @@
 .elements-grid{
     padding: 0;
-    margin: 47.25px 200px 67px 200px;
+    margin: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 20px 17px;
 }
-@media (max-width: 1000px){
-    .elements-grid{
-        margin: 47.25px 100px 67px 100px;
-    }
-}
 @media (max-width: 700px){
     .elements-grid{
-        margin: 0px 19px 50px 19px;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 20px;
@@ -21,7 +15,6 @@
 }
 @media (max-width: 400px){
     .elements-grid{
-        margin-bottom: 48px;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
     }
