--- a/blocks/elements-grid/__delete/elements-grid__delete.css
+++ b/blocks/elements-grid/__delete/elements-grid__delete.css
@@ -1,6 +1,6 @@
 .elements-grid__delete{
     position: absolute;
-    left: 249px;
+    right: 15px;
     top: 18px;
     padding: 0;
     width: 18px;
@@ -14,59 +14,4 @@
 }
 .elements-grid__delete:hover{
     opacity: 0.6;
-}
-@media (max-width: 1260px){
-    .elements-grid__delete{
-        left: 200px;
-    }
-}
-@media (max-width: 1160px){
-    .elements-grid__delete{
-        left: 180px;
-    }
-}
-@media (max-width: 1060px){
-    .elements-grid__delete{
-        left: 150px;
-    }
-}
-@media (max-width: 1000px){
-    .elements-grid__delete{
-        left: 200px;
-    }
-}
-@media (max-width: 930px){
-    .elements-grid__delete{
-        left: 160px;
-    }
-}
-@media (max-width: 810px){
-    .elements-grid__delete{
-        left: 135px;
-    }
-}
-@media (max-width: 700px){
-    .elements-grid__delete{
-        left: 250px;
-    }
-}
-@media (max-width: 625px){
-    .elements-grid__delete{
-        left: 200px;
-    }
-}
-@media (max-width: 530px){
-    .elements-grid__delete{
-        left: 150px;
-    }
-}
-@media (max-width: 420px){
-    .elements-grid__delete{
-        left: 120px;
-    }
-}
-@media (max-width: 400px){
-    .elements-grid__delete{
-        left: 250px;
-    }
 }
