ПР 8 Сделать Веб пак 2

--- a/blocks/elements-grid/__like/elements-grid__like.css
+++ b/blocks/elements-grid/__like/elements-grid__like.css
@@ -1,5 +1,5 @@
 .elements-grid__like{
-    background-image: url(../../../images/white\ heart.svg);
+    background-image: url(../../../images/whiteHeart.svg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 22px;
