--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -4,7 +4,7 @@
     border: 1px solid #FFFFFF;
     margin-left: 18px;
     margin-right: 18px;
-    background-image: url(../../../images/Vector\(3\).svg);
+    background-image: url(../../../images/VectorThree.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
