--- a/blocks/elements-grid/__like/_active/elements-grid__like_active.css
+++ b/blocks/elements-grid/__like/_active/elements-grid__like_active.css
@@ -1,4 +1,4 @@
 .elements-grid__like_active{
-    background-image: url(../../../../images/black\ heart.svg);
+    background-image: url(../../../../images/blackHeart.svg);
     opacity: 1;
 }
