--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -6,7 +6,7 @@
     top: -40px;
     border: none;
     background:none;
-    background-image: url(../../../images/Close\ Icon\ \(1\).svg);
+    background-image: url(../../../images/CloseIconOne.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
