--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -28,6 +28,6 @@
     .profile__add{
         width: 282px;
         height: 50px;
-        background-image: url(../../../images/Vector\ \(4\).svg);
+        background-image: url(../../../images/VectorFour.svg);
     }
 }
