--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,4 @@
 @import url(../blocks/form/__input/_invalid/form__input_invalid.css);
 @import url(../blocks/form/__button/_invalid/form__button_invalid.css);
 @import url(../blocks/error/error.css);
+@import url(../blocks/card-list/card-list.css);
