--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,8 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__edit-container/profile__edit-container.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
@@ -21,12 +23,15 @@
 @import url(../blocks/elements-grid/__delete/elements-grid__delete.css);
 @import url(../blocks/elements-grid/__text/elements-grid__text.css);
 @import url(../blocks/elements-grid/__img-container/elements-grid__img-container.css);
+@import url(../blocks/elements-grid/__like-container/elements-grid__like-container.css);
+@import url(../blocks/elements-grid/__like-number/elements-grid__like-number.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_type/popup_type_add.css);
 @import url(../blocks/popup/_type/popup_type_edit.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/popup/_type/popup_type_avatar.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__button/popup__button.css);
@@ -37,6 +42,7 @@
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/_type/form_type_avatar.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/_text/form__input_text_subtitle.css);
 @import url(../blocks/form/__input/_text/form__input_text_title.css);
