--- a/main.css
+++ b/main.css
@@ -20,11 +20,12 @@
 .elements-grid__title{color:#000;font-family:Inter,arial,sans-serif;font-size:24px;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:calc(100% - 22px)}@media (max-width:1000px){.elements-grid__title{font-size:18px;line-height:22px}}@media (max-width:320px){.elements-grid__title{font-size:24px;line-height:29px;max-width:200px}}
 .elements-grid__like{background-color:#fff;background-image:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;background-size:cover;border:none;box-sizing:border-box;cursor:pointer;flex-shrink:0;height:19px;width:22px}@media (max-width:950px){.elements-grid__like{height:17px;width:21px}}@media (max-width:320px){.elements-grid__like{height:19px;width:22px}}.elements-grid__like:hover{opacity:.5}
 .elements-grid__like_active{background-image:url(35948469632d0421d697.svg);opacity:1}
-.elements-grid__delete{background:none;background-image:url(c4956c32989e66228de8.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19.3px;padding:0;position:absolute;right:15px;top:18px;width:18px}.elements-grid__delete:hover{opacity:.6}
+.elements-grid__delete{background:none;background-image:url(c4956c32989e66228de8.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19.3px;opacity:0;padding:0;position:absolute;right:15px;top:18px;width:18px}
 .elements-grid__text{align-items:center;display:flex;justify-content:space-between;margin:25px 15px 31px 21px}
 .elements-grid__img-container{height:282px}
 
 .elements-grid__like-number{color:#000;font-family:Inter;font-size:13px;font-weight:400;line-height:16px;margin:0;text-align:center}
+.elements-grid__delete_active{opacity:1}.elements-grid__delete_active:hover{opacity:.6}
 .footer{margin:0 200px 60px}@media (max-width:1000px){.footer{margin:0 100px 60px}}@media (max-width:700px){.footer{margin:0 19px 36px}}
 .footer__copyright{color:#545454;font-family:Inter,arial,sans-serif;font-size:18px;font-weight:400;line-height:22px;margin:0}@media (max-width:320px){.footer__copyright{font-size:14px;line-height:17px;margin:0}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:visibility 0s,opacity .5s linear;visibility:hidden}
