--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,6 +25,7 @@
 @import url(../blocks/elements-grid/__img-container/elements-grid__img-container.css);
 @import url(../blocks/elements-grid/__like-container/elements-grid__like-container.css);
 @import url(../blocks/elements-grid/__like-number/elements-grid__like-number.css);
+@import url(../blocks/elements-grid/__delete/_active/elements-grid__delete_active.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
