--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 .elements-grid__img-container{height:282px}
 
 .elements-grid__like-number{color:#000;font-family:Inter;font-size:13px;font-weight:400;line-height:16px;margin:0;text-align:center}
-.elements-grid__delete_active{opacity:1}.elements-grid__delete_active:hover{opacity:.6}
+.elements-grid__delete_active{background:none;background-image:url(c4956c32989e66228de8.svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19.3px;opacity:1;padding:0;position:absolute;right:15px;top:18px;width:18px}.elements-grid__delete_active:hover{opacity:.6}
 .footer{margin:0 200px 60px}@media (max-width:1000px){.footer{margin:0 100px 60px}}@media (max-width:700px){.footer{margin:0 19px 36px}}
 .footer__copyright{color:#545454;font-family:Inter,arial,sans-serif;font-size:18px;font-weight:400;line-height:22px;margin:0}@media (max-width:320px){.footer__copyright{font-size:14px;line-height:17px;margin:0}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;cursor:pointer;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:visibility 0s,opacity .5s linear;visibility:hidden}
